// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-disclosure-button #render should render component as expected (1) 1`] = `"<gux-disclosure-button lang=\\"en\\" class=\\"hydrated\\"></gux-disclosure-button>"`;

exports[`gux-disclosure-button #render should render component as expected (1) 2`] = `
<div class="gux-disclosure-button-container gux-left">
  <button class="gux-disclosure-button">
    <gux-icon class="hydrated" icon-name="arrow-solid-right" screenreader-text="Open"></gux-icon>
  </button>
  <div class="gux-disclosure-panel gux-left">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button #render should render component as expected (2) 1`] = `"<gux-disclosure-button lang=\\"en\\" is-open=\\"\\" class=\\"hydrated\\"></gux-disclosure-button>"`;

exports[`gux-disclosure-button #render should render component as expected (2) 2`] = `
<div class="gux-disclosure-button-container gux-left">
  <button class="gux-disclosure-button">
    <gux-icon class="hydrated" icon-name="arrow-solid-left" screenreader-text="Open"></gux-icon>
  </button>
  <div class="gux-active gux-disclosure-panel gux-left">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button #render should render component as expected (3) 1`] = `"<gux-disclosure-button lang=\\"en\\" position=\\"left\\" class=\\"hydrated\\"></gux-disclosure-button>"`;

exports[`gux-disclosure-button #render should render component as expected (3) 2`] = `
<div class="gux-disclosure-button-container gux-left">
  <button class="gux-disclosure-button">
    <gux-icon class="hydrated" icon-name="arrow-solid-right" screenreader-text="Open"></gux-icon>
  </button>
  <div class="gux-disclosure-panel gux-left">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button #render should render component as expected (4) 1`] = `"<gux-disclosure-button lang=\\"en\\" is-open=\\"\\" position=\\"left\\" class=\\"hydrated\\"></gux-disclosure-button>"`;

exports[`gux-disclosure-button #render should render component as expected (4) 2`] = `
<div class="gux-disclosure-button-container gux-left">
  <button class="gux-disclosure-button">
    <gux-icon class="hydrated" icon-name="arrow-solid-left" screenreader-text="Open"></gux-icon>
  </button>
  <div class="gux-active gux-disclosure-panel gux-left">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button #render should render component as expected (5) 1`] = `"<gux-disclosure-button lang=\\"en\\" position=\\"right\\" class=\\"hydrated\\"></gux-disclosure-button>"`;

exports[`gux-disclosure-button #render should render component as expected (5) 2`] = `
<div class="gux-disclosure-button-container gux-right">
  <button class="gux-disclosure-button">
    <gux-icon class="hydrated" icon-name="arrow-solid-left" screenreader-text="Open"></gux-icon>
  </button>
  <div class="gux-disclosure-panel gux-right">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button #render should render component as expected (6) 1`] = `"<gux-disclosure-button lang=\\"en\\" is-open=\\"\\" position=\\"right\\" class=\\"hydrated\\"></gux-disclosure-button>"`;

exports[`gux-disclosure-button #render should render component as expected (6) 2`] = `
<div class="gux-disclosure-button-container gux-right">
  <button class="gux-disclosure-button">
    <gux-icon class="hydrated" icon-name="arrow-solid-right" screenreader-text="Open"></gux-icon>
  </button>
  <div class="gux-active gux-disclosure-panel gux-right">
    <slot name="panel-content"></slot>
  </div>
</div>
`;

exports[`gux-disclosure-button #render should render component as expected (7) 1`] = `"<gux-disclosure-button lang=\\"en\\" label=\\"More Info\\" class=\\"hydrated\\"></gux-disclosure-button>"`;

exports[`gux-disclosure-button #render should render component as expected (7) 2`] = `
<div class="gux-disclosure-button-container gux-left">
  <button class="gux-disclosure-button">
    <gux-icon class="hydrated" icon-name="arrow-solid-right" screenreader-text="More Info"></gux-icon>
  </button>
  <div class="gux-disclosure-panel gux-left">
    <slot name="panel-content"></slot>
  </div>
</div>
`;
